[project]
name = "Silence"
dynamic = ["version"]
description = "An educational API+Web framework."
authors = [
    { name = "Agustín Borrego", email = "borrego@us.es" },
    { name = "Oscar Alvarez Gonzalez", email = "oscaralvrz._@github" },
]
maintainers = [{ name = "Miguel Bermudo", email = "mbermudo@us.es" }]
license = "MIT"
dependencies = [
    "colorama == 0.4.4",
    "msgspec @ git+https://github.com/jcrist/msgspec",
    "tomli_w == 1.2.0",
    "granian == 2.6.0",
    "flpc == 0.2.5",
    # "cryptography == 36.0.2",
    "Flask-Cors==3.0.10",
    "Flask==3.1.2",
    "itsdangerous==2.2.0",
    "PyMySQL~=1.0.2",
    "pypika @ git+https://github.com/kayak/pypika",
    "requests~=2.27.1",
    "Werkzeug~=3.1.3",
]
requires-python = ">=3.14"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[project.scripts]
silence = "silence.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/silence"]

[tool.hatch.version]
path = "src/silence/__version__.py"

[tool.hatch.envs.default]
dependencies = ["black"]

[tool.hatch.envs.default.scripts]
lint = "ruff check ."
format = "black ."

[tool.hatch.envs.lint]
detached = true
dependencies = ["black>=23.0.0", "ruff>=0.1.0"]

[tool.hatch.envs.lint.scripts]
check = "ruff check ."
format = ["black .", "ruff check --fix ."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint.isort]
lines-after-imports = 1
